--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,16 @@
     <ListView
         android:id="@+id/track_list_view"
         android:layout_weight="100"
+        android:divider="@color/divider"
+        android:dividerHeight="4dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
 
     <android.support.v7.widget.Toolbar
-        android:background="#333333"
+        android:background="@color/primary"
         android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="70dp">
 
         <ImageView
             android:id="@+id/selected_track_image"
