--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,18 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+
+        <item name="colorPrimary">@color/primary</item>
+
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+
+        <item name="android:colorAccent">@color/accent</item>
+
+        <item name="android:divider">@color/divider</item>
+        <item name="android:colorControlHighlight">@color/primary_light</item>
+
+        <item name="android:windowBackground">@color/icons</item>
+
     </style>
 
 </resources>
